mediaqueries nav top

--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,15 @@ header .nav-top span{
 }
 
 /* final header */
+
+/* inicio mediqueries */
+@media(min-width: 48em){
+
+    header .nav-top a i{
+        font-size: 120%;
+    }
+
+    header .nav-top span{
+        display: inline;
+    }
+}
