--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,36 @@ header nav .menu li:last-child a{
 
 /* final header */
 
+/* inicio footer */
+
+footer{
+    background-color: var(--colorsecundario);
+    padding: 1.25em 0px;
+    text-align: center;
+    color: white;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    font-size: 110%;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    color: var(--colorprincipal);
+}
+
+.flecha a{
+    display: block;
+    color: var(--colorprincipal);
+    font-size: 300%;
+    position: fixed;
+    bottom: 4.375rem;
+    right:1.25rem;
+}
+/* final footer */
+
 /* inicio mediqueries */
 @media(min-width: 48em){
     header .nav-top a i{
@@ -120,6 +150,10 @@ header nav .menu li:last-child a{
 
     header .nav-top .container{
         justify-content: space-between;
+    }
+
+    footer{
+        text-align: left;
     }
 }
 
