--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,52 @@ main section .enlace{
 
 /* fin our services */
 
+/* inicio about us */
+
+main #aboutus .grid figure{
+    /* provisional  background-color: tomato;*/
+   /* provisional  height: 400px;*/
+    width: 100%;
+}
+
+main #aboutus .grid>div{
+   /* provisional  background-color: violet;*/
+   /* provisional  height: 400px;*/ 
+    width: 100%;
+}
+
+
+main #aboutus .grid h3{
+    font-size: 110%;
+    font-weight: 700;
+}
+
+main #aboutus .grid h4{
+    margin: var(--margingrid) 0;
+    color: var(--colorprincipal);
+}
+
+main #aboutus .imagen{
+    width: 93%;
+    margin: 1.5em auto;
+}
+
+main #aboutus .imagen .marco{
+    border: 3px solid var(--colorprincipal);
+    transform: rotateZ(10deg);
+    transition: 1s;
+}
+
+main #aboutus .imagen .marco img{
+    transform: rotateZ(-10deg);
+    transition: 1s;
+}
+
+main #aboutus .imagen:hover :is(.marco, .marco img){
+    transform: rotateZ(0deg);
+}
+/* fin about us */
+
 /* inicio mediqueries */
 @media(min-width: 48em){
     header .nav-top a i{
@@ -327,6 +373,19 @@ main section .enlace{
     main #services article:last-child{
         width: 100%;
     }
+
+    main #aboutus .grid figure, main #aboutus .grid>div{
+        width: 50%;
+    }
+
+    main #aboutus .grid h3{
+        margin-top: var(--margingrid);
+    }
+
+    main #aboutus .imagen{
+        margin: var(--margingrid) 0 2em 0;
+    }
+
 }
 
 @media(min-width: 62.75em){
